fixing greptiles & cubics crying issues